# speckle

./: Makefile.am  README.md  autogen.sh  configure.ac
leveldb-1.7.0/: Makefile.am  Makefile.orig
src/: Makefile.am  leveldb_util.h  main.cc  query_main.cc  string_util.cc  string_util.h
src/lib_json/: Makefile.am
