noinst_LTLIBRARIES = 

noinst_LTLIBRARIES += libjson.la

libjson_la_SOURCES =
libjson_la_SOURCES += json_reader.cpp 
libjson_la_SOURCES += json_value.cpp 
libjson_la_SOURCES += json_writer.cpp 
libjson_la_SOURCES += json_batchallocator.h 
libjson_la_SOURCES += json_valueiterator.inl
libjson_la_SOURCES += json_internalarray.inl 
libjson_la_SOURCES += json_internalmap.inl
libjson_la_SOURCES += $(top_srcdir)/include/json/autolink.h
libjson_la_SOURCES += $(top_srcdir)/include/json/config.h
libjson_la_SOURCES += $(top_srcdir)/include/json/features.h
libjson_la_SOURCES += $(top_srcdir)/include/json/forwards.h
libjson_la_SOURCES += $(top_srcdir)/include/json/json.h
libjson_la_SOURCES += $(top_srcdir)/include/json/reader.h
libjson_la_SOURCES += $(top_srcdir)/include/json/value.h
libjson_la_SOURCES += $(top_srcdir)/include/json/writer.h

libjson_la_CXXFLAGS = -I$(top_srcdir)/include
